--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://gabrielcerri.github.io/react-crud",
   "name": "itci-project",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.6",
+    "gh-pages": "^3.2.3",
     "protected-routes": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -25,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
